--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,5 @@
 body {
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -20,6 +21,12 @@ header {
   margin: 1px;
 }
 
+.card-header {
+  text-align: center;
+  font-size: 20px;
+  width: 70%;
+}
+
 .main-top {
   margin: 2px;
   padding: 5px;
@@ -31,38 +38,153 @@ header {
   align-items: center;
 }
 
-.search-fighterA {
-  opacity: 60%;
+.searchFighterA {
   margin: 2px;
-  height: 25vh;
+  height: 35vh;
+  flex-basis: 35%;
+  background-color: rgba(0, 0, 190, 0.829);
+  display: flex;
+  flex-direction: row;
+  border-radius: 10%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.fighterInput {
+  margin: 2px;
+  padding-bottom: 10px;
+  height: fit-content;
+  flex-basis: 85%;
+  background-color: darkgray;
+  display: flex;
+  border-radius: 10%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.input-containerLg {
+  width: 95%;
+  border-radius: 10%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+/*                                             */
+.row-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 2px;
+}
+
+.row-header {
+  margin: 2px;
+}
+/*                                              */
+.input-row {
+  display: flex;
+  flex-direction: row;
+  min-width: 100%;
+}
+/*                                              */
+#firstName {
+  width: 33%;
+}
+#lastName {
+  width: 34%;
+}
+#total-fights {
+  width: 33%;
+}
+/*                                              */
+#ufc-fights {
+  width: 33%;
+}
+#fight-mins {
+  width: 34%;
+}
+#fight-secs {
+  width: 33%;
+}
+/*                                             */
+#striking-acc {
+  width: 20%;
+}
+#striking-def {
+  width: 20%;
+}
+#strikes-Lpm {
+  width: 30%;
+}
+#strikes-Apm {
+  width: 30%;
+}
+/*                                             */
+#td-acc {
+  width: 33%;
+}
+#td-def {
+  width: 34%;
+}
+#td-Lpm {
+  width: 33%;
+}
+/*                                              */
+#strikes-standing {
+  width: 33%;
+}
+#strikes-clinch {
+  width: 34%;
+}
+#strikes-ground {
+  width: 33%;
+}
+/*                                              */
+#win-dec {
+  width: 33%;
+}
+#win-ko {
+  width: 34%;
+}
+#win-sub {
+  width: 33%;
+}
+/*                                              */
+#loss-dec {
+  width: 33%;
+}
+#loss-ko {
+  width: 34%;
+}
+#loss-sub {
+  width: 33%;
+}
+/*                                               */
+#kd-per15 {
+  width: 100%;
+}
+/*                                                */
+.register-fighter {
+  margin: 2px;
+  margin-top: 10px;
+  border-radius: 10%;
+}
+
+.searchFighterB {
+  margin: 2px;
+  height: 35vh;
   flex-basis: 35%;
   background-color: maroon;
   display: flex;
   flex-direction: row;
   border-radius: 10%;
-}
-
-.fighter-input {
-  opacity: 60%;
-  margin: 2px;
-  height: 30vh;
-  flex-basis: 30%;
-  flex-shrink: none;
-  background-color: maroon;
   display: flex;
-  flex-direction: row;
-  border-radius: 10%;
-}
-
-.search-fighterB {
-  opacity: 60%;
-  margin: 2px;
-  height: 25vh;
-  flex-basis: 35%;
-  background-color: maroon;
-  display: flex;
-  flex-direction: row;
-  border-radius: 10%;
+  flex-direction: column;
+  align-items: center;
 }
 
 .main-bottom {
@@ -80,7 +202,7 @@ header {
   margin: 2px;
   height: 35vh;
   flex-basis: 35%;
-  background-color: blue;
+  background-color: rgba(0, 0, 190, 0.829);
   display: flex;
   flex-direction: row;
   border-radius: 10%;
